# ChangeLog for mail-client/mutt
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/mail-client/mutt/ChangeLog,v 1.82 2006/07/13 12:21:33 agriffis Exp $

  13 Jul 2006; Aron Griffis <agriffis@gentoo.org> mutt-1.5.11-r2.ebuild:
  Mark 1.5.11-r2 stable on ia64

  28 Jun 2006; Luis Medinas <metalgod@gentoo.org> mutt-1.5.11-r2.ebuild:
  Stable on amd64. See security bug #138125.

  27 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org> mutt-1.5.11-r2.ebuild:
  Stable on sparc wrt security #138125

  27 Jun 2006; Fernando J. Pereda <ferdy@gentoo.org> mutt-1.5.11-r2.ebuild:
  Stable on alpha (bug #138125)

  27 Jun 2006; Rene Nussbaumer <killerfox@gentoo.org> mutt-1.5.11-r2.ebuild:
  Stable on hppa. See bug #138125.

  27 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org> mutt-1.5.11-r2.ebuild:
  Stable on x86 wrt bug #138125.

  27 Jun 2006; Markus Rothe <corsair@gentoo.org> mutt-1.5.11-r2.ebuild:
  Stable on ppc64; bug #138125

  27 Jun 2006; Fabian Groffen <grobian@gentoo.org> mutt-1.5.11-r2.ebuild:
  Marked ppc-macos stable (bug #138125)

  27 Jun 2006; Emanuele Giaquinta <exg@gentoo.org> mutt-1.5.11-r2.ebuild:
  Stable on ppc; bug #138125

  27 Jun 2006; Fernando J. Pereda <ferdy@gentoo.org> mutt-1.5.11-r2.ebuild:
  Remove explicit autoconf and automake dependencies.

*mutt-1.5.11-r2 (27 Jun 2006)

  27 Jun 2006; Fernando J. Pereda <ferdy@gentoo.org>
  +files/mutt-1.5.11-imap-browse.patch, +mutt-1.5.11-r2.ebuild:
  Add a patch to fix security bug #138125. Also use autotools.eclass to
  reconfigure the build framework when needed.

*mutt-1.5.11-r30 (18 May 2006)

  18 May 2006; Fernando J. Pereda <ferdy@gentoo.org>
  +mutt-1.5.11-r30.ebuild:
  Add a package.mask'd version for patch testing.

  20 Feb 2006; Joshua Kinard <kumba@gentoo.org> mutt-1.5.11.ebuild:
  Marked stable on mips.

*mutt-1.5.11-r1 (26 Nov 2005)

  26 Nov 2005; Fernando J. Pereda <ferdy@gentoo.org>