@@ -1,0 +1,6 @@
+MD5 409faa9d48db2fd492e46eed4ffdf1f5 mutt-1.5.12-gentoo-patches.tar.bz2 53435
+RMD160 419ff2ebd14ad394ea5d34814f17583ee5a439b6 mutt-1.5.12-gentoo-patches.tar.bz2 53435
+SHA256 e285cd217707719ba7a22e912c6cc00319e9873f31580bdef51331d9b6313dff mutt-1.5.12-gentoo-patches.tar.bz2 53435
+MD5 57196c816211a72900fdc54341eb0132 mutt-1.5.12.tar.gz 3440835
+RMD160 e68d4c5b099b8148769d138a36fa8561b278969c mutt-1.5.12.tar.gz 3440835
+SHA256 0d0c2ab6cea0d93579bc5490fafdae3bf640070d993490c7b00ccac4fa808b67 mutt-1.5.12.tar.gz 3440835
