@@ -1,6 +1,12 @@
 # ChangeLog for mail-client/mutt
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-client/mutt/ChangeLog,v 1.82 2006/07/13 12:21:33 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-client/mutt/ChangeLog,v 1.83 2006/07/30 11:11:33 ferdy Exp $
+
+*mutt-1.5.12 (30 Jul 2006)
+
+  30 Jul 2006; Fernando J. Pereda <ferdy@gentoo.org>
+  -mutt-1.5.11-r30.ebuild, +mutt-1.5.12.ebuild:
+  Version bump, bug #141033. Reported by Shark <shark@bitchx.it>.
 
   13 Jul 2006; Aron Griffis <agriffis@gentoo.org> mutt-1.5.11-r2.ebuild:
   Mark 1.5.11-r2 stable on ia64
